# sdl2-tutorial

./: CMakeLists.txt  tutorial.01-hello_world.cxx
